# Saruman

./: .gitignore  ProjectSaruman.spec  README.md  build.bat  build.ps1  pyproject.toml
.claude/: settings.json
assets/: CREDITS.md
assets/maps/: level_01_greenshire_hills.tmx  level_02_wolfwood.tmx  level_03_glass_caverns.tmx  level_04_sunken_mines.tmx  level_05_ash_marshes.tmx  level_06_pale_tower.tmx  level_07_cursed_catacombs.tmx  level_08_forsaken_bridge.tmx  level_09_skybound_spires.tmx  level_10_goblin_kings_throne.tmx  level_11_ashfall_wastes.tmx  level_12_cinderwood_remains.tmx  level_13_emberfall_keep.tmx
saruman/: __main__.py  config.py  main.py  paths.py
saruman/core/: assets.py  audio.py  game.py  input.py  state.py
saruman/entities/: enemy.py  entity.py  interactive.py  item.py  player.py  projectile.py  trigger.py
saruman/physics/: collision.py
saruman/save/: highscores.py  settings.py
saruman/states/: controls.py  (+10 more)
tests/: test_bonus.py  test_collision.py  test_credits.py  test_enemy.py  test_enemy_helpers.py  test_gameover.py  test_interactive.py  test_level_loader.py  test_lives.py  test_menu.py  test_night_king.py  test_parallax.py  test_particle.py  test_pause.py  test_play_chain.py  test_player.py  test_save.py  test_settings.py  test_weather.py  test_world.py  test_worldcard.py
tools/: generate_audio.py  generate_greybox.py  generate_level_07.py  generate_level_08.py  generate_level_09.py  generate_level_10.py  generate_level_11.py  generate_level_12.py  generate_level_13.py  generate_sfx.py  generate_sprites.py  tmx_builder.py
(+9 files in other folders)
